add  README.Zh-cn.md

--- a/cmd/makefile
+++ b/cmd/makefile
@@ -10,12 +10,16 @@ all: build
 build:
 	$(GOBUILD) -o $(BINARY_NAME) -v
 test:
-	$(GOTEST) -v ./...
+# windows
+# $(GOTEST) -v ..\test\...
+# linux
+	$(GOTEST) -v ../test/...
+
 clean:
 	$(GOCLEAN)
 	rm -f $(BINARY_NAME)
 
-# Cross compilation
+# Cross compilation, when on window to build linux bin file
 build-linux:
-	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 $(GOBUILD) -o $(BINARY_UNIX) -v
+	env CGO_ENABLED=0 GOOS=linux GOARCH=amd64 $(GOBUILD) -o $(BINARY_UNIX) -v
 
